save the changes

--- a/index.html
+++ b/index.html
@@ -3,9 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+     <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
+    <!-- external style -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <div class="sidebar">
+            <h2 class="recent-news-title">Recent New</h2>
+            <div class="news-articel">
+                <p class="news-date">20:12</p>
+                <p class="news-title">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            </div>
+            <div class="news-articel">
+                <p class="news-date">20:12</p>
+                <p class="news-title">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            </div>
+            <div class="news-articel">
+                <p class="news-date">20:12</p>
+                <p class="news-title">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            </div>
+            <div class="news-articel">
+                <p class="news-date">20:12</p>
+                <p class="news-title">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            </div>
+            <div class="news-articel">
+                <p class="news-date">20:12</p>
+                <p class="news-title">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            </div>
+        </div>
+        <div class="content">
+            <nav class="navbar">
+                <button class="navbar-btn">
+                    <span class="btn-line1"></span>
+                    <span class="btn-line2"></span>
+                </button>
+                <ul class="nav-menu">
+                    <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">about</a></li>
+                </ul>
+            </nav>
+            
+            <div class="container">
+                <h1 class="page-title">SilkRoad</h1>
+                <div class="model-container">
+                    <div class="container1 cont">
+                        <p class="news-card-title"><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Eaque, tempora?</p>
+                        <div class="overlay"></div>
+                    </div>
+                    <div class="container2 cont">
+                        <p class="news-card-title"><b>Lorem ipsum dolor</b> sit amet consectetur.</p>
+                        <div class="overlay"></div>
+                    </div>
+                    <div class="container3 cont">
+                        <p class="news-card-title"><b>Lorem ipsum dolor</b> sit amet consectetur.</p>
+                        <div class="overlay"></div>
+                    </div>
+                    <div class="container4 cont">
+                        <p class="news-card-title"><b>Lorem ipsum dolor</b> sit amet consectetur.</p>
+                        <div class="overlay"></div>
+                    </div>
+                    <div class="container5 cont">
+                        <p class="news-card-title"><b>Lorem ipsum dolor</b> sit amet consectetur.</p>
+                        <div class="overlay"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
