modify the style

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 </div>
             </div>
         </div>
+        <button class="plus-btn">+</button>
     </main>
 </body>
 </html>
