save the changes

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
                 <p class="news-date">20:12</p>
                 <p class="news-title">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
             </div>
-            <div class="news-articel">
-                <p class="news-date">20:12</p>
-                <p class="news-title">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            <div class="read-more-container">
+                <p class="">+ Read more</p>
             </div>
         </div>
         <div class="content">
